<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/background_radius_16_gray"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:textDirection="locale"
    android:paddingHorizontal="@dimen/_10sdp"
    android:paddingBottom="@dimen/_20sdp">

    <ImageView
        android:id="@+id/closeBtn"
        android:src="@drawable/icon_close_black"
        android:contentDescription="@string/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp" />


    <TextView
        android:id="@+id/closeTitle"
        style="@style/CustomTextStyleSemiBold18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:maxLines="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:gravity="center"
        android:text="@string/exit_title"
        android:textColor="@color/text_display" />

    <TextView
        android:id="@+id/exitQuestion"
        style="@style/CustomTextStyle14sp"
        app:layout_constraintTop_toBottomOf="@id/closeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:maxLines="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/exit_question"
        android:textColor="@color/unselected" />



    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/exitQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_cancel"
            style="@style/CustomTextStyleSemiBold16sp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_weight="1"
            android:background="@drawable/background_radius_12_white"
            android:backgroundTint="@color/secondColor"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/no"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_exit"
            style="@style/CustomTextStyleMedium16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/yes_exit"
            android:textColor="@color/unselected" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>