<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_20sdp"
    android:paddingTop="@dimen/_40sdp"
    android:paddingBottom="@dimen/_20sdp"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/homeIntroduce"
            style="@style/CustomTextStyleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/invite_searching"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchText"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:autofillHints="name"
            android:background="@drawable/background_radius_100"
            android:hint="@string/search"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_14sdp"
            android:textColor="@color/black"
            android:textColorHint="#7A7981"
            app:layout_constraintEnd_toStartOf="@+id/searchIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeIntroduce" />

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:background="@drawable/background_radius_100"
            android:contentDescription="@string/imageView"
            android:padding="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:src="@drawable/icon_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/searchText" />

        <LinearLayout
            android:id="@+id/mainFunction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/searchText">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nutritionMeal"
                android:layout_width="0dp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/nutrition_meal"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_4sdp">

                <ImageView
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:contentDescription="@string/imageView"
                    android:src="@drawable/icon_nutrition"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nutrition_title"
                    style="@style/CustomTextStyleSemiBold14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_title"
                    app:layout_constraintBottom_toTopOf="@+id/nutrition_desc"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/nutrition_desc"
                    style="@style/CustomTextStyle12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scanning"
                android:layout_width="0dp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/meal_scanning"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_4sdp">

                <ImageView
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:contentDescription="@string/imageView"
                    android:src="@drawable/icon_scan_meal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/scanning_title"
                    style="@style/CustomTextStyleSemiBold14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scanning_title"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/scanning_desc"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/scanning_desc"
                    style="@style/CustomTextStyle12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scanning_desc"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noRecentScan"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/mainFunction"
            android:background="@drawable/background_radius_20"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:contentDescription="@string/imageView"
                android:src="@drawable/icon_no_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                style="@style/CustomTextStyleMedium14sp"
                android:text="@string/no_meal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                style="@style/CustomTextStyle12sp"
                android:text="@string/no_scan_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/scanBtn"
                android:background="@drawable/background_radius_10_gray"
                android:backgroundTint="@color/secondColor"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_20sdp"
                style="@style/CustomTextStyleMedium16sp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/meal_scanning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/recentScan"
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/CustomTextStyleMedium18sp"
            android:textColor="@color/text_display"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainFunction"
            android:text="@string/recent_scans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/seeMore"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/CustomTextStyle12sp"
            android:textColor="#7A7981"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recentScan"
            app:layout_constraintBottom_toBottomOf="@id/recentScan"
            android:text="@string/see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentItems"
            android:nestedScrollingEnabled="false"
            android:paddingVertical="@dimen/_16sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/recentScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>