<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/background_radius_16_gray"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:textDirection="locale"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingBottom="@dimen/_20sdp">

    <ImageView
        android:id="@+id/closeBtn"
        android:src="@drawable/icon_close_black"
        android:contentDescription="@string/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp" />


    <TextView
        android:id="@+id/closeTitle"
        style="@style/CustomTextStyleSemiBold18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:maxLines="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:gravity="start"
        android:text="@string/guide_title"
        android:textColor="@color/text_display" />

    <LinearLayout
        android:id="@+id/guideStep"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/closeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <ImageView
                android:contentDescription="@string/imageView"
                android:src="@drawable/icon_language"
                android:padding="@dimen/_6sdp"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                style="@style/CustomTextStyle14sp"
                android:textColor="@color/unselected"
                android:text="@string/guide_step_1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:contentDescription="@string/imageView"
                android:src="@drawable/icon_language"
                android:padding="@dimen/_6sdp"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                style="@style/CustomTextStyle14sp"
                android:textColor="@color/unselected"
                android:text="@string/guide_step_2"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:contentDescription="@string/imageView"
                android:src="@drawable/icon_language"
                android:padding="@dimen/_6sdp"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                style="@style/CustomTextStyle14sp"
                android:textColor="@color/unselected"
                android:text="@string/guide_step_3"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/guidePic"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/guideStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" >

            <ImageView
                android:src="@drawable/fail_1"
                android:contentDescription="@string/imageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_84sdp"/>

            <TextView
                android:layout_marginTop="8sp"
                style="@style/CustomTextStyleMedium14sp"
                android:text="@string/fail"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_height="wrap_content" >

            <ImageView
                android:src="@drawable/fail_2"
                android:contentDescription="@string/imageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_84sdp"/>

            <TextView
                android:layout_marginTop="8sp"
                style="@style/CustomTextStyleMedium14sp"
                android:text="@string/fail"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" >

            <ImageView
                android:src="@drawable/success_1"
                android:contentDescription="@string/imageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_84sdp"/>

            <TextView
                android:layout_marginTop="8sp"
                style="@style/CustomTextStyleMedium14sp"
                android:text="@string/pass"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        
        +
    </LinearLayout>


    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/guidePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_ok"
            style="@style/CustomTextStyleSemiBold16sp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_weight="1"
            android:background="@drawable/background_radius_12_white"
            android:backgroundTint="@color/secondColor"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/ok"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_cancel"
            style="@style/CustomTextStyleMedium16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/unselected" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>